fix left shift in work section header

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 
 html {
   -webkit-text-size-adjust: 100%;
+  overflow-y: scroll;
 }
 
 body {
